--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             window.location.href = 'http://www.google.com';
         } else {
  
-            window.location.href = 'https://drive.google.com/file/d/10CFgBVsJlmIWeHO7KcS-jI0sWNjf0hnH/view?fbclid=IwAR2ndnJVIGBpC1YtOXWyfk2m0rwIFvy2D1VuTI9kB3C_NwG_130XIH9r8FU';
+            window.location.href = 'http://www.facebook.com';
         }
     </script>
 </head>
